<resources>
    <string name="dummy_text" translatable="false">Dummy text</string>
    <string name="app_name">Chalmers Card Balance</string>

    <string name="notifications_title_balance">Low balance</string>
    <string name="notifications_desc_balance">Get notified when balance is low</string>
    

    <string name="restaurant_image_desc">Restaurant\'s Image</string>
    <string name="restaurant_closed_today">Closed Today</string>
    <string name="restaurant_closed_today_detailed">This restaurant is closed today</string>
    <string name="restaurant_todays_menu">Today\'s menu</string>
    <string name="restaurant_about">About Restaurant</string>
    <string name="restaurant_dishes_count_zero">No dishes to choose from</string>
    <string name="restaurant_dishes_count">%1$s to choose from</string>
    <string name="dish_copied">%1$s has been copied</string>

    <string name="restaurant_about_open_now">Open Now</string>
    <string name="restaurant_about_open_today">Open Today</string>
    <string name="restaurant_about_closed_now">Closed Now</string>
    <string name="restaurant_about_opens_at">Opens at %1$s</string>
    <string name="restaurant_about_closed_today">Closed Today</string>
    <string name="restaurant_about_hours_range" translatable="false">%1$s - %2$s</string>
    <string name="restaurant_about_avg_price">About %1$d SEK</string>
    <string name="restaurant_about_avg_no_price">No price information</string>
    <string name="restaurant_about_campus">Campus %1$s</string>

    <string name="upgraded_slide_1_title">Welcome Back</string>
    <string name="upgraded_slide_1_desc">We have made some nice changes for you!</string>
    <string name="upgraded_slide_2_title">Updated UI</string>
    <string name="upgraded_slide_2_desc">A fresh new UI suitable for a modern Android experience!"</string>
    <string name="upgraded_slide_3_title">New Features</string>
    <string name="upgraded_slide_3_desc">More detailed information about restaurants!</string>

    <string name="first_time_tite">Welcome</string>
    <string name="first_time_desc">This app lets you easily manage your card. But first, you must add your card number.</string>

    <string name="slide_login_title">One last step…</string>
    <string name="slide_login_desc">In order to get card balance updates, you will have to login to the card service. You only have to do this once and you will be prompted in the next screen.</string>
    <string name="slide_login_sorry_title">Sorry</string>
    <string name="slide_login_sorry_desc">As you probably noticed, your card balance hasn\'t updated all summer, and I have been slow at addressing the problem.</string>
    <string name="slide_login_back_title">Back to normal</string>
    <string name="slide_login_back_desc">The problem has now been resolved, and you can continue using the app as always.</string>

    <string name="card_number_hint" translatable="false">3819 1234 1234 1234</string>
    <string name="card_number_prompt">Enter card number</string>

    <string name="notification_title">Low Balance</string>
    <string name="notification_text">Your card balance is only %1$s SEK</string>

    <string name="currency_suffix">%1$s SEK</string>
    <string name="currency_kronor">SEK</string>
    <string name="action_copy_card_number">Copy Card Number</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_finish">Finish</string>
    <string name="action_view_on_github">View on GitHub</string>
    <string name="action_visit_website">Visit Website</string>
    <string name="action_clear">Clear</string>
    <string name="action_connect">Connect</string>
    <string name="action_retry">Retry</string>
    <string name="action_open">Open</string>
    <string name="action_close">Close</string>
    <string name="action_charge">Charge Card</string>
    <string name="card_number_copied">Card number %1$s copied</string>
    <string name="error_not_valid_number">Not a valid card number</string>
    <string name="error_no_internet">Not connected to the internet</string>
    <string name="error_card_failed">Updating the card failed</string>
    <string name="error_menu_failed">Updating the food menu failed</string>
    <string name="action_continue">Continue</string>
    <string name="action_login">Login</string>

    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_balance_history">Balance History</string>

    <string name="dialog_about_version_text">Version %1$s (%2$d)</string>
    <string name="dialog_about_developed_by">Developed by Alexander Håkansson</string>
    <string name="dialog_about_feedback">If you want to give feedback, make a suggestion, or report a bug; please visit the project on GitHub and  submit an issue.</string>

    <string name="dialog_user_info_finish_title">Are you sure?</string>
    <string name="dialog_user_info_finish_desc">It seems you haven\'t completed the login process yet, are you sure you want to go back?</string>
    <string name="dialog_user_info_ready_title">You\'re all set!</string>
    <string name="dialog_user_info_ready_desc">It seems you\'ve completed the login, would you like to go back?</string>
    <string name="dialog_user_info_instruction_title">Login Instructions:</string>
    <string name="dialog_user_info_instruction_desc">1. Submit your card number\n<i>(try the copy button)</i>\n\n2. Login using your credentials\n\n<b>3. IMPORTANT:</b> Check \"remember me\"</string>

    <string name="dialog_main_login_title">Not logged in!</string>
    <string name="dialog_main_login_desc">It seems you\'re not logged in to the card balance service. You will not be able to get balance updates. Do you wish to login?</string>

    <string name="prefs_general_title">General</string>
    <string name="prefs_notifications_title">Notifications</string>
    <string name="prefs_card_number">Card Number</string>
    <string name="prefs_menu_lang">Food Menu Language</string>
    <string name="prefs_notifications_enable_notifications">Enable Notifications</string>
    <string name="prefs_notifications_low_balance_label">Low Balance Warning Limit</string>
    <string name="prefs_menu_lang_en">English</string>
    <string name="prefs_menu_lang_sv">Swedish</string>
    <string-array name="prefs_menu_lang_list">
        <item>@string/prefs_menu_lang_en</item>
        <item>@string/prefs_menu_lang_sv</item>
    </string-array>

    <string name="login_title">Card Login</string>

    <plurals name="dish">
        <item quantity="zero">No dishes</item>
        <item quantity="one">1 dish</item>
        <item quantity="other">%d dishes</item>
    </plurals>
</resources>
